--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "scripts": {
     "lint": "eslint ./src --ext .ts",
     "lint:fix": "eslint ./src --ext .ts --fix",
-    "build": "tsc"
+    "build": "tsc",
+    "prepare": "tsc"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.49.0",
